Fix overlapping images in the subscribe section for all screens

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,12 @@ body {
 
 .double {
     top: 10px;
-    left: 60px;
+    left: 80px;
+}
+
+.overlap {
+    max-width: 260px;
+    margin: auto;
 }
 
 .sm-image {
